fixed overflow

--- a/css/Events.css
+++ b/css/Events.css
@@ -1,3 +1,6 @@
+html,body{
+  overflow-x: hidden;
+}
 *{
   color: white;
   font-family: 'Source Code Pro', monospace;
