--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -1,5 +1,10 @@
+html,body{
+  overflow-x: hidden;
+}
 *{
-  font-family: 'Source Code Pro', monospace;
+  /* font-family: 'Source Code Pro', monospace; */
+  font-family:  'montserrat';
+  /* color: white; */
 }
 body {
   /* display: flex; */
